--- a/resources/brewfile
+++ b/resources/brewfile
@@ -11,11 +11,9 @@ brew 'node'
 
 # System
 brew 'mackup'
-brew 'mas'          # Mac App Store manager
 
 # Apps
 cask 'arduino-ide'
-cask 'colorpicker-skalacolor'
 cask 'dbngin'
 cask 'fork'
 cask 'google-chrome'
@@ -29,3 +27,7 @@ cask 'spotify'
 cask 'steam'
 cask 'tableplus'
 cask 'visual-studio-code'
+
+# Mac App Store
+brew 'mas'                              # Mac App Store manager
+mas "ColorSlurp", id: 1287239339
