--- a/resources/brewfile
+++ b/resources/brewfile
@@ -1,5 +1,5 @@
 tap 'homebrew/cask-fonts'
-tap 'homebrew/cask-versions'
+#tap 'homebrew/cask-versions'
 tap 'homebrew/bundle'
 
 # These need to be installed first
