--- a/dotfiles/.config/starship.toml
+++ b/dotfiles/.config/starship.toml
@@ -26,12 +26,12 @@ style = "bright-black"
 [git_status]
 format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
 style = "cyan"
-conflicted = "<200b>"
-untracked = "<200b>"
-modified = "<200b>"
-staged = "<200b>"
-renamed = "<200b>"
-deleted = "<200b>"
+conflicted = "​"
+untracked = "​"
+modified = "​"
+staged = "​"
+renamed = "​"
+deleted = "​"
 stashed = "≡"
 
 [git_state]
